# advent-of-code

./: .gitignore  LICENSE
aoc2021/: Cargo.toml
aoc2021/src/: main.rs
aoc2021/src/binary_diagnostic/: mod.rs  solve.rs
aoc2021/src/chiton/: mod.rs  solve.rs
aoc2021/src/dive/: mod.rs  solve.rs
aoc2021/src/dumbo_octopus/: mod.rs  solve.rs
aoc2021/src/extended_polymerization/: mod.rs  solve.rs
aoc2021/src/giant_squid/: mod.rs  solve.rs
aoc2021/src/hydrothermal_venture/: mod.rs  solve.rs
aoc2021/src/lanternfish/: mod.rs  solve.rs
aoc2021/src/packet_decoder/: mod.rs  solve.rs
aoc2021/src/passage_pathing/: mod.rs  solve.rs
aoc2021/src/seven_segment_search/: mod.rs  solve.rs
aoc2021/src/smoke_basin/: mod.rs  solve.rs
aoc2021/src/snailfish/: mod.rs  solve.rs
aoc2021/src/sonar_sweep/: mod.rs  solve.rs
aoc2021/src/syntax_scoring/: mod.rs  solve.rs
aoc2021/src/transparent_origami/: mod.rs  solve.rs
aoc2021/src/treachery_of_whales/: mod.rs  solve.rs
aoc2021/src/trick_shot/: mod.rs  solve.rs
aoc2022/: Cargo.toml
aoc2022/src/: main.rs
aoc2022/src/beacon_exclusion_zone/: mod.rs  solve.rs
aoc2022/src/calorie_counting/: mod.rs  solve.rs
aoc2022/src/camp_cleanup/: mod.rs  solve.rs
aoc2022/src/cathode_ray_tube/: mod.rs  solve.rs
aoc2022/src/distress_signal/: mod.rs  solve.rs
aoc2022/src/hill_climbing/: mod.rs  solve.rs
aoc2022/src/monkey_in_the_middle/: mod.rs  solve.rs
aoc2022/src/no_space_left/: mod.rs  solve.rs
aoc2022/src/proboscidea_volcanium/: mod.rs  solve.rs
aoc2023/: Cargo.toml
aoc2023/src/: main.rs
(+22 files in other folders)
