[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
run_solver = []
print_long_ans = []

[dependencies]
ndarray = "0.15.6"
good_lp = {version = "1.3.2",  default-features = false, features = ["minilp"]}
itertools = "0.10.5"
nom = "7.1.1"
petgraph = "0.6.2"
rayon = "1.6.0"
